--- a/RVTxx-demo.ioc
+++ b/RVTxx-demo.ioc
@@ -98,12 +98,14 @@ STMicroelectronics.X-CUBE-TOUCHGFX.4.16.1.tgfx_display_interface=disp_ltdc
 SH.FMC_D15_DA15.ConfNb=1
 PC9.Mode=SD_4_bits_Wide_bus
 SPI2.CalculateBaudRate=22.5 MBits/s
+SH.S_TIM4_CH2.0=TIM4_CH2,PWM Generation2 CH2
 PE2.Signal=GPIO_Output
 PF8.Mode=Single Bank 1
 PA8.Signal=GPIO_Input
 RCC.PLLRCLKFreq_Value=180000000
 SH.FMC_D1_DA1.0=FMC_D1,sd-16b-d1
 NVIC.PendSV_IRQn=true\:15\:0\:false\:false\:false\:true\:false\:false
+TIM4.Period=1280
 PF3.Signal=FMC_A3
 PC15/OSC32_OUT.Locked=true
 VP_FREERTOS_VS_CMSIS_V1.Mode=CMSIS_V1
@@ -235,6 +237,7 @@ Mcu.Pin58=PH6
 PB11.Mode=Asynchronous
 PH4.Locked=true
 PI0.GPIO_Speed=GPIO_SPEED_FREQ_VERY_HIGH
+TIM4.IPParameters=Channel-PWM Generation2 CH2,Period,Prescaler
 Mcu.Pin51=PE11
 Mcu.Pin52=PE12
 SH.FMC_D15_DA15.0=FMC_D15,sd-16b-d1
@@ -407,6 +410,7 @@ PA2.GPIO_PuPd=GPIO_PULLUP
 SDIO.ClockEdge=SDIO_CLOCK_EDGE_RISING
 SH.FMC_A6.ConfNb=1
 PA6.Mode=RGB888
+SH.S_TIM4_CH2.ConfNb=1
 SH.FMC_A8.0=FMC_A8,12b-sda1
 RCC.CortexFreq_Value=180000000
 SH.FMC_A2.ConfNb=1
@@ -462,7 +466,7 @@ Mcu.ThirdPartyNb=1
 RCC.SDIOFreq_Value=48000000
 PH0/OSC_IN.Mode=HSE-External-Oscillator
 RCC.HCLKFreq_Value=180000000
-Mcu.IPNb=17
+Mcu.IPNb=18
 RCC.I2SClocksFreq_Value=96000000
 ProjectManager.PreviousToolchain=STM32CubeIDE
 RCC.VcooutputI2S=96000000
@@ -503,14 +507,15 @@ PC15/OSC32_OUT.GPIOParameters=GPIO_Label
 SH.FMC_D2_DA2.0=FMC_D2,sd-16b-d1
 PG11.GPIO_Speed=GPIO_SPEED_FREQ_VERY_HIGH
 LTDC.VBP=23
+Mcu.IP17=USB_OTG_FS
 Mcu.ThirdParty0=STMicroelectronics.X-CUBE-TOUCHGFX.4.16.1
-Mcu.IP14=USART3
+Mcu.IP14=TIM4
 PF9.Mode=Single Bank 1
 PB4.Mode=Full_Duplex_Master
 Mcu.IP13=SYS
 PE13.Signal=FMC_D10_DA10
-Mcu.IP16=USB_OTG_FS
-Mcu.IP15=USART6
+Mcu.IP16=USART6
+Mcu.IP15=USART3
 RCC.VCOInputFreq_Value=1000000
 PI5.Locked=true
 PH7.GPIO_Label=R_INT
@@ -528,7 +533,7 @@ PH3.GPIOParameters=GPIO_Speed
 LTDC.HFP=160
 PE3.Locked=true
 SH.FMC_D2_DA2.ConfNb=1
-PB7.Signal=GPIO_Output
+PB7.Signal=S_TIM4_CH2
 PH6.GPIOParameters=GPIO_Label
 PB8.Locked=true
 LTDC.BlendingFactor2_L0=LTDC_BLENDING_FACTOR2_CA
@@ -543,7 +548,7 @@ PE4.Signal=LTDC_B0
 FREERTOS.configTOTAL_HEAP_SIZE=55360
 ProjectManager.ProjectName=RVTxx-demo
 PD7.GPIO_Label=LCD_GPIO2
-PB7.GPIO_Label=LCD_GPIO1
+PB7.GPIO_Label=BL_PWM
 PA6.Signal=LTDC_G2
 SH.FMC_D0_DA0.0=FMC_D0,sd-16b-d1
 USART6.VirtualMode=VM_ASYNC
@@ -668,6 +673,7 @@ PG10.GPIOParameters=GPIO_Speed
 ProjectManager.RegisterCallBack=
 RCC.USBFreq_Value=48000000
 PI5.GPIOParameters=GPIO_Label
+TIM4.Prescaler=50
 PE11.Signal=FMC_D8_DA8
 PG7.Mode=RGB888
 RCC.LSE_VALUE=32768
@@ -686,6 +692,7 @@ RCC.VCOOutputFreq_Value=360000000
 PI9.Signal=LTDC_VSYNC
 PB15.Mode=Full_Duplex_Master
 PH0/OSC_IN.Signal=RCC_OSC_IN
+TIM4.Channel-PWM\ Generation2\ CH2=TIM_CHANNEL_2
 PI8.Locked=true
 PG7.GPIO_Speed=GPIO_SPEED_FREQ_VERY_HIGH
 NVIC.SavedSystickIrqHandlerGenerated=true
